[fix] Referee - ball, strike 카운트 초기화 안되는 버그 수정