@@ -8,17 +8,18 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class RefereeTest {
 
 
     private static List<Arguments> provideNumbersForComparison() {
-        return List.of(
-                Arguments.of(List.of(1,5,9), List.of(1,2,3), 1, 0),
-                Arguments.of(List.of(1,2,3), List.of(1,2,3), 3, 0),
-                Arguments.of(List.of(1,2,3), List.of(4,5,6), 0, 0),
-                Arguments.of(List.of(1,2,3), List.of(2,3,1), 0, 3)
+        return Arrays.asList(
+                Arguments.of(Arrays.asList(1, 5, 9), Arrays.asList(1, 2, 3), 1, 0),
+                Arguments.of(Arrays.asList(1, 2, 3), Arrays.asList(1, 2, 3), 3, 0),
+                Arguments.of(Arrays.asList(1, 2, 3), Arrays.asList(4, 5, 6), 0, 0),
+                Arguments.of(Arrays.asList(1, 2, 3), Arrays.asList(2, 3, 1), 0, 3)
         );
     }
 
